--- a/index.html
+++ b/index.html
@@ -150,18 +150,16 @@
             <div class="coluna">
                 <h4>Contato</h4>
                 <p>Entre em contato para mais informações sobre serviços.</p>
-                <div class="icones-sociais">
-                    <a href="#"><i class="fab fa-facebook-f"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-tiktok"></i></a>
-                    <a href="#"><i class="fab fa-x-twitter"></i></a>
-                </div>
+                <br>
+                <a style="margin-top: 20px; color: #fff; text-decoration: none;" href="politicas.html">Política
+                    Privacidade</a>
             </div>
 
             <div class="coluna">
                 <h4>Serviços</h4>
                 <p>(11) 3040-8406</p>
-                <p>adsystem@www.com.br</p>
+                <p>(11) 3040-8401</p>
+                <p>adsystem.fiscal@terra.com.br</p>
             </div>
 
             <div class="coluna">
@@ -173,8 +171,22 @@
         </div>
 
         <div class="copy">
+            <p><strong>Telepost Marketing Promocoes e Incentivo LTDA</strong></p>
             <p>CNPJ: 01.562.184/0001-46</p>
-            <p>Telepost Marketing Promocoes e Incentivo LTDA</p>
+            <p>Inscrição Estadual (SP): 115.301.252.117</p>
+            <p>Data de Abertura: 21/11/1996 — 28 anos, 5 meses e 24 dias</p>
+            <p>Porte: Sem Enquadramento | Capital Social: R$ 200.000,00</p>
+            <p>Natureza Jurídica: Sociedade Empresária Limitada</p>
+            <p>Opção pelo MEI: Não | Simples Nacional: Não</p>
+            <p>Situação Cadastral: Ativa desde 03/11/2005</p>
+            <p>Endereço: Rua Siqueira Bueno, 1350 - Belenzinho, São Paulo - SP, CEP 03173-010</p>
+            <p>E-mail: adsystem.fiscal@terra.com.br | Telefones: (11) 3040-8406 / (11) 3040-8401</p>
+            <p><strong>Atividade Principal:</strong> Comércio varejista de cosméticos, produtos de perfumaria e de
+                higiene pessoal (CNAE 47.72-5-00)</p>
+            <p><strong>Atividades Secundárias:</strong> Consultoria em publicidade, Agências de publicidade, Marketing
+                direto, Comércio atacadista e varejista de cosméticos, produtos alimentícios e de higiene pessoal,
+                Intermediação de serviços em geral.</p>
+            <p><strong>Sócios:</strong> Kamor S.A. (Uruguai), Moema Paes de Almeida Braga, Paulo Jose Ferreira Braga</p>
         </div>
     </footer>
 
